# django-depersonalizer

./: README.md  TODO.md  pyproject.toml
depersonalizer/: apps.py  conf.py  data_source.py  main.py  settings.py
depersonalizer/management/commands/: depersonalize.py
